--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
 
-# Created by https://www.toptal.com/developers/gitignore/api/macos,linux,python,jupyternotebooks
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux,python,jupyternotebooks
-
+# End of https://www.toptal.com/developers/gitignore/api/virtualenv
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
