--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,15 @@
         "**/.gitignore": true,
         "**/.vscode": true
     },
-    "python.pythonPath": "/home/pop518504/Workspace/.conda/envs/gknet-benchmarks/bin/python"
+    "python.pythonPath": "/home/pop518504/Workspace/.conda/envs/gknet-benchmarks/bin/python",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests",
+        "-p",
+        "test*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true
 }
