--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 absl-py==0.11.0
 anyio==2.0.2
 argon2-cffi==20.1.0
-asax @ file:///home/pop518504/git/asax
-ase @ file:///home/pop518504/git/gknet-benchmarks/ase
 astunparse==1.6.3
 async-generator==1.10
 attrs==19.3.0
@@ -44,7 +42,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jax==0.2.7
 jax-md==0.1.15
-jaxlib==0.1.57+cuda111
+jaxlib==0.1.57
 jconfigparser==0.1.3
 jedi==0.18.0
 Jinja2==2.11.2
