--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
-# Created by https://www.toptal.com/developers/gitignore/api/pycharm+all
-# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm+all
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
 ### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
